Aggiunte pagine dashboard e confronto preventivi

--- a/simulatore-polizze/polizza.html
+++ b/simulatore-polizze/polizza.html
@@ -38,7 +38,9 @@
           />
         </button>
         <div class="dropdown-content">
-          
+          <a href="dashboard.html">
+            <i class="fas fa-tachometer-alt"></i> Dashboard
+          </a>
           <a href="riconoscimenti.html">
             <i class="fas fa-info-circle"></i> Riconoscimenti
           </a>
