--- a/simulatore-polizze/riconoscimenti.html
+++ b/simulatore-polizze/riconoscimenti.html
@@ -36,6 +36,9 @@
           />
         </button>
         <div class="dropdown-content">
+          <a href="dashboard.html">
+            <i class="fas fa-tachometer-alt"></i> Dashboard
+          </a>
           <a href="polizza.html">
             <i class="fas fa-calculator"></i> Simulatore
           </a>
