Descrizione delle modifiche

--- a/simulatore-polizze/index.html
+++ b/simulatore-polizze/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Pagina di login per il simulatore polizze Reale ITES" />
+    <meta
+      name="description"
+      content="Pagina di login per il simulatore polizze Reale ITES"
+    />
     <title>Reale ITES - Login</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
@@ -14,11 +17,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <!-- simboli -->
-    <link 
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/forms.css" />
     <link
       rel="icon"
       href="https://www.theofficialboard.fr/img/twitterCompanyBigImages/83350.png"
@@ -52,23 +57,23 @@
         <form id="form-login">
           <label for="username">
             <i class="fas fa-user"></i> USERNAME:
-            <input 
-              type="text" 
-              id="username" 
-              autocomplete="username" 
-              placeholder="Inserisci il tuo username" 
-              required 
+            <input
+              type="text"
+              id="username"
+              autocomplete="username"
+              placeholder="Inserisci il tuo username"
+              required
             />
           </label>
 
           <label for="password">
             <i class="fas fa-key"></i> PASSWORD:
-            <input 
-              type="password" 
-              id="password" 
+            <input
+              type="password"
+              id="password"
               autocomplete="current-password"
-              placeholder="Inserisci la tua password" 
-              required 
+              placeholder="Inserisci la tua password"
+              required
             />
           </label>
 
@@ -78,10 +83,16 @@
         </form>
         <div class="login-info">
           <p>
-            <i class="fas fa-info-circle"></i> Accedi al simulatore per calcolare il premio della tua polizza Reale ITES
+            <i class="fas fa-info-circle"></i> Accedi al simulatore per
+            calcolare il premio della tua polizza Reale ITES
           </p>
           <div class="demo-credentials">
-            <p><small>Credenziali di prova: username: <strong>demo</strong>, password: <strong>demo</strong></small></p>
+            <p>
+              <small
+                >Credenziali di prova: username: <strong>demo</strong>,
+                password: <strong>demo</strong></small
+              >
+            </p>
           </div>
         </div>
       </div>
