--- a/simulatore-polizze/polizza.html
+++ b/simulatore-polizze/polizza.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Simulatore polizza assicurativa Reale ITES per il calcolo dei premi" />
+    <meta
+      name="description"
+      content="Simulatore polizza assicurativa Reale ITES per il calcolo dei premi"
+    />
     <title>Reale ITES - Simulatore Polizza</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
@@ -17,7 +20,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/forms.css" />
+    <link rel="stylesheet" href="css/polizze.css" />
     <link
       rel="icon"
       href="https://www.theofficialboard.fr/img/twitterCompanyBigImages/83350.png"
@@ -44,18 +50,14 @@
           <a href="riconoscimenti.html">
             <i class="fas fa-info-circle"></i> Riconoscimenti
           </a>
-          <a href="index.html">
-            <i class="fas fa-sign-out-alt"></i> Esci
-          </a>
+          <a href="index.html"> <i class="fas fa-sign-out-alt"></i> Esci </a>
         </div>
       </div>
     </div>
 
     <header>
       <div class="header-container">
-        <h1>
-          <i class="fas fa-calculator"></i> Simulatore Polizza Reale ITES
-        </h1>
+        <h1><i class="fas fa-calculator"></i> Simulatore Polizza Reale ITES</h1>
       </div>
     </header>
 
@@ -102,7 +104,8 @@
         </form>
 
         <div id="risultato">
-          <i class="fas fa-info-circle"></i> Inserisci i tuoi dati per calcolare il premio
+          <i class="fas fa-info-circle"></i> Inserisci i tuoi dati per calcolare
+          il premio
         </div>
       </section>
 
