--- a/simulatore-polizze/riconoscimenti.html
+++ b/simulatore-polizze/riconoscimenti.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Informazioni su Reale ITES e la sua storia" />
+    <meta
+      name="description"
+      content="Informazioni su Reale ITES e la sua storia"
+    />
     <title>Riconoscimenti Reale ITES</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
@@ -17,7 +20,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/about.css" />
     <link
       rel="icon"
       href="https://www.theofficialboard.fr/img/twitterCompanyBigImages/83350.png"
@@ -27,7 +32,7 @@
   <body>
     <div class="navbar">
       <h1>Reale ITES - Riconoscimenti</h1>
-      
+
       <div class="dropdown">
         <button class="dropbtn">
           <img
@@ -42,9 +47,7 @@
           <a href="polizza.html">
             <i class="fas fa-calculator"></i> Simulatore
           </a>
-          <a href="index.html">
-            <i class="fas fa-sign-out-alt"></i> Esci
-          </a>
+          <a href="index.html"> <i class="fas fa-sign-out-alt"></i> Esci </a>
         </div>
       </div>
     </div>
@@ -130,18 +133,30 @@
 
     <section>
       <div class="button-containers">
-        <a href="https://www.facebook.com/RealeMutuaTorinoBorgoPo" target="_blank" class="social-button facebook">
+        <a
+          href="https://www.facebook.com/RealeMutuaTorinoBorgoPo"
+          target="_blank"
+          class="social-button facebook"
+        >
           <i class="fab fa-facebook-f"></i> Facebook
         </a>
-        <a href="https://www.linkedin.com/company/reale-group/posts/?feedView=all" target="_blank" class="social-button linkedin">
+        <a
+          href="https://www.linkedin.com/company/reale-group/posts/?feedView=all"
+          target="_blank"
+          class="social-button linkedin"
+        >
           <i class="fab fa-linkedin-in"></i> LinkedIn
         </a>
-        <a href="https://www.instagram.com/realemutuaofficial/" target="_blank" class="social-button instagram">
+        <a
+          href="https://www.instagram.com/realemutuaofficial/"
+          target="_blank"
+          class="social-button instagram"
+        >
           <i class="fab fa-instagram"></i> Instagram
         </a>
       </div>
     </section>
-    
+
     <footer>
       <div>
         <p>
