--- a/simulatore-polizze/riconoscimenti.html
+++ b/simulatore-polizze/riconoscimenti.html
@@ -168,6 +168,11 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/calculator.js"></script>
+    <script src="js/storage.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
