--- a/index.html
+++ b/index.html
@@ -87,11 +87,23 @@
             calcolare il premio della tua polizza Reale ITES
           </p>
           <div class="demo-credentials">
-            <p>
-              <small
-                >Credenziali di prova: username: <strong>demo</strong>,
-                password: <strong>demo</strong></small
-              >
+            <p><strong>Modalità API (DummyJSON):</strong></p>
+            <div class="credentials-grid">
+              <div class="credential-item">
+                <small>Username: <strong>emilys</strong></small><br>
+                <small>Password: <strong>emilyspass</strong></small>
+              </div>
+              <div class="credential-item">
+                <small>Username: <strong>michaelw</strong></small><br>
+                <small>Password: <strong>michaelwpass</strong></small>
+              </div>
+              <div class="credential-item">
+                <small>Username: <strong>sophiab</strong></small><br>
+                <small>Password: <strong>sophiabpass</strong></small>
+              </div>
+            </div>
+            <p style="margin-top: 10px;">
+              <small><strong>Modalità Locale:</strong> demo/demo, alessandro/1234, admin/admin</small>
             </p>
           </div>
         </div>
@@ -110,7 +122,7 @@
     </footer>
 
     <script src="js/config.js"></script>
-    <script src="js/auth.js"></script>
+    <script src="js/auth-guard.js"></script>
     <script src="js/calculator.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/ui.js"></script>
