--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             calcolare il premio della tua polizza Reale ITES
           </p>
           <div class="demo-credentials">
-            <p><strong>Modalità API (DummyJSON):</strong></p>
+            <p><strong>Credenziali DummyJSON API:</strong></p>
             <div class="credentials-grid">
               <div class="credential-item">
                 <small>Username: <strong>emilys</strong></small><br>
@@ -102,9 +102,6 @@
                 <small>Password: <strong>sophiabpass</strong></small>
               </div>
             </div>
-            <p style="margin-top: 10px;">
-              <small><strong>Modalità Locale:</strong> demo/demo, alessandro/1234, admin/admin</small>
-            </p>
           </div>
         </div>
       </div>
